libs/ŘParser.cpp

// Generated from Ř.g4 by ANTLR 4.11.1


#include "ŘVisitor.h"

#include "ŘParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct ŘParserStaticData final {
  ŘParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  ŘParserStaticData(const ŘParserStaticData&) = delete;
  ŘParserStaticData(ŘParserStaticData&&) = delete;
  ŘParserStaticData& operator=(const ŘParserStaticData&) = delete;
  ŘParserStaticData& operator=(ŘParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag řParserOnceFlag;
ŘParserStaticData *řParserStaticData = nullptr;

void řParserInitialize() {
  assert(řParserStaticData == nullptr);
  auto staticData = std::make_unique<ŘParserStaticData>(
    std::vector<std::string>{
      "prog", "block", "stmtlist", "stmt", "expr", "arglist", "func", "literal"
    },
    std::vector<std::string>{
      "", "'{'", "'}'", "';'", "'<-'", "'if'", "'('", "')'", "'else'", "'while'", 
      "'*'", "'/'", "'+'", "'-'", "'=='", "'>'", "'<'", "'!'", "','", "'fun'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "INTLIT", "ID", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  řParserStaticData = staticData.release();
}

}

ŘParser::ŘParser(TokenStream *input) : ŘParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

ŘParser::ŘParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  ŘParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *řParserStaticData->atn, řParserStaticData->decisionToDFA, řParserStaticData->sharedContextCache, options);
}

ŘParser::~ŘParser() {
  delete _interpreter;
}

const atn::ATN& ŘParser::getATN() const {
  return *řParserStaticData->atn;
}

std::string ŘParser::getGrammarFileName() const {
  return "Ř.g4";
}

const std::vector<std::string>& ŘParser::getRuleNames() const {
  return řParserStaticData->ruleNames;
}

const dfa::Vocabulary& ŘParser::getVocabulary() const {
  return řParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView ŘParser::getSerializedATN() const {
  return řParserStaticData->serializedATN;
}


//----------------- ProgContext ------------------------------------------------------------------

ŘParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ŘParser::BlockContext* ŘParser::ProgContext::block() {
  return getRuleContext<ŘParser::BlockContext>(0);
}


size_t ŘParser::ProgContext::getRuleIndex() const {
  return ŘParser::RuleProg;
}


std::any ŘParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ŘVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

ŘParser::ProgContext* ŘParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, ŘParser::RuleProg);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(16);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

ŘParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ŘParser::StmtlistContext* ŘParser::BlockContext::stmtlist() {
  return getRuleContext<ŘParser::StmtlistContext>(0);
}

ŘParser::StmtContext* ŘParser::BlockContext::stmt() {
  return getRuleContext<ŘParser::StmtContext>(0);
}


size_t ŘParser::BlockContext::getRuleIndex() const {
  return ŘParser::RuleBlock;
}


std::any ŘParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ŘVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

ŘParser::BlockContext* ŘParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 2, ŘParser::RuleBlock);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(23);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ŘParser::T__0: {
        enterOuterAlt(_localctx, 1);
        setState(18);
        match(ŘParser::T__0);
        setState(19);
        stmtlist();
        setState(20);
        match(ŘParser::T__1);
        break;
      }

      case ŘParser::T__4:
      case ŘParser::T__5:
      case ŘParser::T__8:
      case ŘParser::T__16:
      case ŘParser::INTLIT:
      case ŘParser::ID: {
        enterOuterAlt(_localctx, 2);
        setState(22);
        stmt();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtlistContext ------------------------------------------------------------------

ŘParser::StmtlistContext::StmtlistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ŘParser::StmtContext* ŘParser::StmtlistContext::stmt() {
  return getRuleContext<ŘParser::StmtContext>(0);
}

std::vector<ŘParser::StmtlistContext *> ŘParser::StmtlistContext::stmtlist() {
  return getRuleContexts<ŘParser::StmtlistContext>();
}

ŘParser::StmtlistContext* ŘParser::StmtlistContext::stmtlist(size_t i) {
  return getRuleContext<ŘParser::StmtlistContext>(i);
}


size_t ŘParser::StmtlistContext::getRuleIndex() const {
  return ŘParser::RuleStmtlist;
}


std::any ŘParser::StmtlistContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ŘVisitor*>(visitor))
    return parserVisitor->visitStmtlist(this);
  else
    return visitor->visitChildren(this);
}

ŘParser::StmtlistContext* ŘParser::stmtlist() {
  StmtlistContext *_localctx = _tracker.createInstance<StmtlistContext>(_ctx, getState());
  enterRule(_localctx, 4, ŘParser::RuleStmtlist);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(25);
    stmt();
    setState(30);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(26);
        match(ŘParser::T__2);
        setState(27);
        stmtlist(); 
      }
      setState(32);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    }
    setState(34);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      setState(33);
      match(ŘParser::T__2);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

ŘParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ŘParser::StmtContext::ID() {
  return getToken(ŘParser::ID, 0);
}

ŘParser::ExprContext* ŘParser::StmtContext::expr() {
  return getRuleContext<ŘParser::ExprContext>(0);
}

ŘParser::FuncContext* ŘParser::StmtContext::func() {
  return getRuleContext<ŘParser::FuncContext>(0);
}

std::vector<ŘParser::BlockContext *> ŘParser::StmtContext::block() {
  return getRuleContexts<ŘParser::BlockContext>();
}

ŘParser::BlockContext* ŘParser::StmtContext::block(size_t i) {
  return getRuleContext<ŘParser::BlockContext>(i);
}


size_t ŘParser::StmtContext::getRuleIndex() const {
  return ŘParser::RuleStmt;
}


std::any ŘParser::StmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ŘVisitor*>(visitor))
    return parserVisitor->visitStmt(this);
  else
    return visitor->visitChildren(this);
}

ŘParser::StmtContext* ŘParser::stmt() {
  StmtContext *_localctx = _tracker.createInstance<StmtContext>(_ctx, getState());
  enterRule(_localctx, 6, ŘParser::RuleStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(63);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(36);
      match(ŘParser::ID);
      setState(37);
      match(ŘParser::T__3);
      setState(38);
      expr(0);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(39);
      match(ŘParser::ID);
      setState(40);
      match(ŘParser::T__3);
      setState(41);
      func();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(42);
      match(ŘParser::T__4);
      setState(43);
      match(ŘParser::T__5);
      setState(44);
      antlrcpp::downCast<StmtContext *>(_localctx)->cond = expr(0);
      setState(45);
      match(ŘParser::T__6);
      setState(46);
      antlrcpp::downCast<StmtContext *>(_localctx)->body = block();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(48);
      match(ŘParser::T__4);
      setState(49);
      match(ŘParser::T__5);
      setState(50);
      antlrcpp::downCast<StmtContext *>(_localctx)->cond = expr(0);
      setState(51);
      match(ŘParser::T__6);
      setState(52);
      antlrcpp::downCast<StmtContext *>(_localctx)->truebody = block();
      setState(53);
      match(ŘParser::T__7);
      setState(54);
      antlrcpp::downCast<StmtContext *>(_localctx)->falsebody = block();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(56);
      match(ŘParser::T__8);
      setState(57);
      match(ŘParser::T__5);
      setState(58);
      expr(0);
      setState(59);
      match(ŘParser::T__6);
      setState(60);
      block();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(62);
      expr(0);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

ŘParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ŘParser::LiteralContext* ŘParser::ExprContext::literal() {
  return getRuleContext<ŘParser::LiteralContext>(0);
}

tree::TerminalNode* ŘParser::ExprContext::ID() {
  return getToken(ŘParser::ID, 0);
}

ŘParser::ArglistContext* ŘParser::ExprContext::arglist() {
  return getRuleContext<ŘParser::ArglistContext>(0);
}

std::vector<ŘParser::ExprContext *> ŘParser::ExprContext::expr() {
  return getRuleContexts<ŘParser::ExprContext>();
}

ŘParser::ExprContext* ŘParser::ExprContext::expr(size_t i) {
  return getRuleContext<ŘParser::ExprContext>(i);
}


size_t ŘParser::ExprContext::getRuleIndex() const {
  return ŘParser::RuleExpr;
}


std::any ŘParser::ExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ŘVisitor*>(visitor))
    return parserVisitor->visitExpr(this);
  else
    return visitor->visitChildren(this);
}


ŘParser::ExprContext* ŘParser::expr() {
   return expr(0);
}

ŘParser::ExprContext* ŘParser::expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  ŘParser::ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, parentState);
  ŘParser::ExprContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 8;
  enterRecursionRule(_localctx, 8, ŘParser::RuleExpr, precedence);

    size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(80);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      setState(66);
      literal();
      break;
    }

    case 2: {
      setState(67);
      match(ŘParser::ID);
      break;
    }

    case 3: {
      setState(68);
      antlrcpp::downCast<ExprContext *>(_localctx)->fun = match(ŘParser::ID);
      setState(69);
      match(ŘParser::T__5);
      setState(71);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 3276864) != 0) {
        setState(70);
        antlrcpp::downCast<ExprContext *>(_localctx)->args = arglist();
      }
      setState(73);
      match(ŘParser::T__6);
      break;
    }

    case 4: {
      setState(74);
      match(ŘParser::T__16);
      setState(75);
      expr(2);
      break;
    }

    case 5: {
      setState(76);
      match(ŘParser::T__5);
      setState(77);
      expr(0);
      setState(78);
      match(ŘParser::T__6);
      break;
    }

    default:
      break;
    }
    _ctx->stop = _input->LT(-1);
    setState(99);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(97);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          _localctx->left = previousContext;
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(82);

          if (!(precpred(_ctx, 7))) throw FailedPredicateException(this, "precpred(_ctx, 7)");
          setState(83);
          antlrcpp::downCast<ExprContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == ŘParser::T__9

          || _la == ŘParser::T__10)) {
            antlrcpp::downCast<ExprContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(84);
          antlrcpp::downCast<ExprContext *>(_localctx)->right = expr(8);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          _localctx->left = previousContext;
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(85);

          if (!(precpred(_ctx, 6))) throw FailedPredicateException(this, "precpred(_ctx, 6)");
          setState(86);
          antlrcpp::downCast<ExprContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == ŘParser::T__11

          || _la == ŘParser::T__12)) {
            antlrcpp::downCast<ExprContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(87);
          antlrcpp::downCast<ExprContext *>(_localctx)->right = expr(7);
          break;
        }

        case 3: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          _localctx->left = previousContext;
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(88);

          if (!(precpred(_ctx, 5))) throw FailedPredicateException(this, "precpred(_ctx, 5)");
          setState(89);
          antlrcpp::downCast<ExprContext *>(_localctx)->op = match(ŘParser::T__13);
          setState(90);
          antlrcpp::downCast<ExprContext *>(_localctx)->right = expr(6);
          break;
        }

        case 4: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          _localctx->left = previousContext;
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(91);

          if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
          setState(92);
          antlrcpp::downCast<ExprContext *>(_localctx)->op = match(ŘParser::T__14);
          setState(93);
          antlrcpp::downCast<ExprContext *>(_localctx)->right = expr(5);
          break;
        }

        case 5: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          _localctx->left = previousContext;
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(94);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(95);
          antlrcpp::downCast<ExprContext *>(_localctx)->op = match(ŘParser::T__15);
          setState(96);
          antlrcpp::downCast<ExprContext *>(_localctx)->right = expr(4);
          break;
        }

        default:
          break;
        } 
      }
      setState(101);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- ArglistContext ------------------------------------------------------------------

ŘParser::ArglistContext::ArglistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ŘParser::ExprContext* ŘParser::ArglistContext::expr() {
  return getRuleContext<ŘParser::ExprContext>(0);
}

std::vector<ŘParser::ArglistContext *> ŘParser::ArglistContext::arglist() {
  return getRuleContexts<ŘParser::ArglistContext>();
}

ŘParser::ArglistContext* ŘParser::ArglistContext::arglist(size_t i) {
  return getRuleContext<ŘParser::ArglistContext>(i);
}


size_t ŘParser::ArglistContext::getRuleIndex() const {
  return ŘParser::RuleArglist;
}


std::any ŘParser::ArglistContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ŘVisitor*>(visitor))
    return parserVisitor->visitArglist(this);
  else
    return visitor->visitChildren(this);
}

ŘParser::ArglistContext* ŘParser::arglist() {
  ArglistContext *_localctx = _tracker.createInstance<ArglistContext>(_ctx, getState());
  enterRule(_localctx, 10, ŘParser::RuleArglist);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(102);
    expr(0);
    setState(107);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(103);
        match(ŘParser::T__17);
        setState(104);
        arglist(); 
      }
      setState(109);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncContext ------------------------------------------------------------------

ŘParser::FuncContext::FuncContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ŘParser::BlockContext* ŘParser::FuncContext::block() {
  return getRuleContext<ŘParser::BlockContext>(0);
}

ŘParser::ArglistContext* ŘParser::FuncContext::arglist() {
  return getRuleContext<ŘParser::ArglistContext>(0);
}


size_t ŘParser::FuncContext::getRuleIndex() const {
  return ŘParser::RuleFunc;
}


std::any ŘParser::FuncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ŘVisitor*>(visitor))
    return parserVisitor->visitFunc(this);
  else
    return visitor->visitChildren(this);
}

ŘParser::FuncContext* ŘParser::func() {
  FuncContext *_localctx = _tracker.createInstance<FuncContext>(_ctx, getState());
  enterRule(_localctx, 12, ŘParser::RuleFunc);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(110);
    match(ŘParser::T__18);
    setState(111);
    match(ŘParser::T__5);
    setState(113);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 3276864) != 0) {
      setState(112);
      antlrcpp::downCast<FuncContext *>(_localctx)->args = arglist();
    }
    setState(115);
    match(ŘParser::T__6);
    setState(116);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LiteralContext ------------------------------------------------------------------

ŘParser::LiteralContext::LiteralContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ŘParser::LiteralContext::INTLIT() {
  return getToken(ŘParser::INTLIT, 0);
}


size_t ŘParser::LiteralContext::getRuleIndex() const {
  return ŘParser::RuleLiteral;
}


std::any ŘParser::LiteralContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ŘVisitor*>(visitor))
    return parserVisitor->visitLiteral(this);
  else
    return visitor->visitChildren(this);
}

ŘParser::LiteralContext* ŘParser::literal() {
  LiteralContext *_localctx = _tracker.createInstance<LiteralContext>(_ctx, getState());
  enterRule(_localctx, 14, ŘParser::RuleLiteral);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(118);
    match(ŘParser::INTLIT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

bool ŘParser::sempred(RuleContext *context, size_t ruleIndex, size_t predicateIndex) {
  switch (ruleIndex) {
    case 4: return exprSempred(antlrcpp::downCast<ExprContext *>(context), predicateIndex);

  default:
    break;
  }
  return true;
}

bool ŘParser::exprSempred(ExprContext *_localctx, size_t predicateIndex) {
  switch (predicateIndex) {
    case 0: return precpred(_ctx, 7);
    case 1: return precpred(_ctx, 6);
    case 2: return precpred(_ctx, 5);
    case 3: return precpred(_ctx, 4);
    case 4: return precpred(_ctx, 3);

  default:
    break;
  }
  return true;
}

void ŘParser::initialize() {
  ::antlr4::internal::call_once(řParserOnceFlag, řParserInitialize);
}
